--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -9,5 +9,6 @@
 	<ul>
 		<li><%=link_to t("nav.signup"), signup_path %></li>
 		<li><%=link_to t("nav.login"), login_path %></li>
+      <li><%=link_to t("nav.logout"), logout_path %></li>
 	</ul>
 </nav>
