--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -1,1 +1,9 @@
-<h1><%= @question.title %></h1>
+<article>
+   <h1><%= @question.title %></h1>
+
+   <%= simple_format @question.body %>
+
+</article>
+
+
+
