--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -2,8 +2,17 @@
    <h1><%= @question.title %></h1>
 
    <%= simple_format @question.body %>
-
 </article>
+
+<h2>Respostas</h2>
+
+<%= render @question.replies %>
+
+<% if logged_in? %>
+   <%= render "replies/form", :reply => @reply, :question => @question %>
+<% else %>
+   <%= t("reply.need_to_be_logged") %>
+<% end %>
 
 
 
