IMPORTANT: Couter Caches implemented

--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -1,2 +1,10 @@
 <h1>Últimas Perguntas</h1>
 
+<ul>
+   <li><%= link_to t("filter.all"), questions_path %></li>
+   <li><%= link_to t("filter.unanswered"), questions_path(:filter => QuestionFilter::UNANSWERED) %></li>
+</ul>
+
+
+<%= render @questions %>
+
